tests/valid/strings.d.ts
export declare function rgbStringList(): void;
export declare function rgbaStringList(): void;
