tests/invalid/invalidDataTypes.d.ts
export declare function undefinedValue(): void;
export declare function nullValue(): void;
export declare function booleanValue(): void;
export declare function functionValue(): void;
export declare function dateObjectValue(): void;
export declare function errorObjectValue(): void;
